--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -10,6 +10,10 @@ body{
     background: #FD6E0A;
     padding:18px 35px 19px 36px;
     border: 0px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    color: #fff;
 }
 /* style for nav */
 
@@ -18,6 +22,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 .nav-icon{
     color: #181818;
@@ -35,4 +40,18 @@ nav li{
 nav a{
     text-decoration: none;
     color:#474747;
+}
+/* style for nav end */
+/* style for header start*/
+.header{
+    background-color: #FFF8F3;
+}
+.home{
+    padding:30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.profile-pic{
+    width: 584px;
+    height: 676px;
 }
