--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -21,6 +21,9 @@ body{
     font-size: 35px;
     font-weight: 700;
 }
+main section{
+    margin-top: 130px;
+}
 /* style for nav */
 
 
@@ -95,3 +98,96 @@ nav a{
 }
 /* header styles end */
 /* main section style start */
+.about{
+    margin-top: 130px;
+    background-color:#FFF8F3;
+    padding: 130px;
+    border-radius: 10px;
+}
+.about-para-text{
+    color: var(--Dark-03, #757575);
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.container{
+    display: flex;
+    justify-content: space-around;
+}
+.item{
+    text-align: center;
+}
+.item p{
+    color:#757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
+/* main section style */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* what id do start */
+.what-i-do{
+    margin-top: 130px;
+}
+.what-i-do > h3{
+    margin-bottom: 30px;
+}
+.what-i-do > p{
+    padding: 30px 150px;
+}
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+/* summary style start */
+.summary-main-container{
+    display: flex;
+    gap: 24px;
+}
+.summary > h3{
+    margin-bottom: 113px;
+}
+.summary-item-head-text{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.summary-item-degree-name{
+    margin-top: 0;
+    margin-bottom: 10px;
+    color:#474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+.summary-item-vercity-name{
+    margin-top: 0;
+    margin-bottom: 20px;
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+}
+.summary-item-para{
+    margin-top: 0;
+    margin-bottom: 30px;
+    margin-right: 47px;
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px; /* 175% */
+}
+
