--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -190,4 +190,21 @@ main{
     font-weight: 400;
     line-height: 28px; /* 175% */
 }
-
+#download-cv-btn{
+    text-align: center;
+    margin-top: 50px;
+}
+footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 113px;
+    padding: 130px 230px;
+    background-color:#FFF8F3;;
+}
+.footer-left > p{
+    max-width: 562px;
+}
+.form > input,textarea{
+    border: 0;
+    margin-bottom: 24px;
+}
